# via-builder

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: TimetableBuilder.cpp  TimetableBuilder.h  ViaBuilderAPI.cpp  ViaBuilderAPI.h  ViaBuilderAPIBindings.cpp  config.cpp  config.h  main.cpp
src/SerializedCourse/: Course.cpp  Course.h  Section.cpp  Section.h  Timetable.cpp  Timetable.h
